--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
         <relativePath />
     </parent>
     <groupId>com.huawei.jenkins</groupId>
-    <artifactId>agc-jenkins</artifactId>
+    <artifactId>agc-app-upload</artifactId>
     <version>${revision}${changelist}</version>
     <packaging>hpi</packaging>
-    <name>AppGallery Connect Upload</name>
+    <name>AppGallery Connect App Upload</name>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
     <licenses>
         <license>
@@ -30,7 +30,7 @@
         <changelist>-SNAPSHOT</changelist>
         <jenkins.version>2.277.1</jenkins.version>
         <java.level>8</java.level>
-        <gitHubRepo>AppGalleryConnect/${project.artifactId}-plugin</gitHubRepo>
+        <gitHubRepo>AppGalleryConnect/agc-jenkins-plugin</gitHubRepo>
     </properties>
 
     <dependencyManagement>
