--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>com.huawei.jenkins</groupId>
     <artifactId>agc-app-upload</artifactId>
-    <version>${revision}${changelist}</version>
+    <version>1.0</version>
     <packaging>hpi</packaging>
     <name>AppGallery Connect App Upload</name>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
@@ -19,12 +19,6 @@
             <url>https://opensource.org/licenses/MIT</url>
         </license>
     </licenses>
-    <scm child.scm.connection.inherit.append.path="false" child.scm.developerConnection.inherit.append.path="false" child.scm.url.inherit.append.path="false">
-        <connection>scm:git:https://github.com/${gitHubRepo}</connection>
-        <developerConnection>scm:git:https://github.com/${gitHubRepo}</developerConnection>
-        <tag>${scmTag}</tag>
-        <url>https://github.com/${gitHubRepo}</url>
-    </scm>
     <properties>
         <revision>1.0</revision>
         <changelist>-SNAPSHOT</changelist>
